octsympy 2.4.0-dev
==================

  * New commands:

          laguerreL

  * Move some functions from the specfun package.  So now the Symbolic
    package hosts some numerical implementations as well:

          dirac
          heaviside
          laguerreL
          lambertw

  * Re-implement @double/laguerreL for numerical stability.



octsympy 2.3.0 (2016-04-08)
===========================

  * New commands:

          airy          chebyshevU      finiteset     rewrite
          besselj       chebyshevT      has           round
          bessely       fix             kron          sort
          besseli       frac            linspace      union
          besselk       intersect       logspace      unique
          besselh       interval        max
          cbrt          ismember        min

  * Bug fix for working with certain unevaluated integrals.

  * Bug fixes for function_handle, fortran and ccode.

  * Bug fixes or improvements to repmat, reshape, python_cmd, factor,
    dot star, children.

  * Support for SymPy 1.0.

  * Errors raised in Python code are now caught and passed back to Octave
    in most cases.  This simplifies implementation.
      - Note some error messages have changed slightly.
      - Windows users now see previously hidden error messages.
    Thanks to @latot.

  * Windows "bundle" package should work even if the system has another
    Python installed.  Thanks to Abhinav Tripathi.

  * Installation bug fixes.  Thanks to Abhinav Tripathi and Mike Miller.

  * New functions for converting sym to integers.  Thanks to @latot.

  * Making a sym of a large integer like `sym(10^16)` gives a warning.
    Please use `sym(10)^16` or `sym('1000000000000123456789').

  * New functions for dealing with sets and intervals and operations
    on them, thanks to @latot.

  * 2D Taylor expansions are implemented, thanks to Utkarsh Gautam.

  * Sort is implemented, thanks to Utkarsh Gautam.
