@@ -3,7 +3,9 @@ octsympy 2.4.0-dev
 
   * New commands:
 
+          cosint
           laguerreL
+          sinint
 
   * Move some functions from the specfun package.  So now the Symbolic
     package hosts some numerical implementations as well:
